# zynk

./: .gitignore  .gitleaks.toml  .vale.ini  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  NOTICE  README.md  SECURITY.md  SKILL.md  WORKFLOW.md  build.rs  flake.nix  justfile
.agents/agents/: README.md  code-reviewer.md  security-auditor.md  test-engineer.md
.agents/references/: orchestration-patterns.md  performance-checklist.md  security-checklist.md  testing-patterns.md
.agents/skills/api-and-interface-design/: SKILL.md
.agents/skills/ci-cd-and-automation/: SKILL.md
.agents/skills/code-review-and-quality/: SKILL.md
.agents/skills/code-simplification/: SKILL.md
.agents/skills/context-engineering/: SKILL.md
.agents/skills/debugging-and-error-recovery/: SKILL.md
.agents/skills/deprecation-and-migration/: SKILL.md
.agents/skills/documentation-and-adrs/: SKILL.md
.agents/skills/doubt-driven-development/: SKILL.md
.agents/skills/git-workflow-and-versioning/: SKILL.md
.agents/skills/incremental-implementation/: SKILL.md
.agents/skills/performance-optimization/: SKILL.md
.agents/skills/planning-and-task-breakdown/: SKILL.md
.agents/skills/security-and-hardening/: SKILL.md
.agents/skills/shipping-and-launch/: SKILL.md
.agents/skills/source-driven-development/: SKILL.md
.agents/skills/spec-driven-development/: SKILL.md
.agents/skills/test-driven-development/: SKILL.md
.agents/skills/using-agent-skills/: SKILL.md
.agents/skills/zynk-pre-release-audit/: SKILL.md
.agents/skills/zynk-pre-release-audit/references/: pre-release-audit.md
.claude/commands/: commit.md  critique-pr.md  document.md  gh-debug-issue.md  gh-fix-ci.md  gh-fix-lint.md  gh-new-pr.md  gh-pr-comments.md  pr-triage.md  pr.md  selfreview.md
.claude/skills/debugging-difficult-bugs/: SKILL.md
.claude/skills/pr-explainer/: SKILL.md
.claude/skills/pr-splitter/: SKILL.md
.claude/skills/smoke-test/: SKILL.md
.claude/skills/zynk-docs/: SKILL.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: build-artifacts-manual.yml  ci.yml  gates.yml  nix.yml  release-dryrun.yml
.pi/extensions/zynk-worktree/: index.ts  package.json
.pi/prompts/: pre-release-audit.md
.zed/: settings.json
docs/styleguides/: STYLEGUIDE.md
docs/styles/zynk/: AvoidFirstPerson.yml  AvoidWeUs.yml
docs/zynk/: SPEC.md  fork-patch-ledger.md
docs/zynk/decisions/: 0001-fork-herdr-as-zynk.md  0002-message-protocol-delivery-receipt.md  0003-persistence-and-retrieval.md  0004-defer-pane-submit-until-exact-draft-proof.md  0005-draft-wire-footer-deferral.md  0006-sqlite-vec-loading-and-embedding-runtime.md  0007-native-zynk-ux-and-rebrand.md  0008-native-db-path-and-wrapper-cutover.md  0009-visible-message-header-replaces-receipt-footer.md  0010-full-rebrand-hard-fork.md
migrations/zynk/: 0001_global_persistence.sql  0002_embedding_index.sql  0003_trace_index.sql
nix/: package.nix
scripts/: capture_agent_screen.py  check_public_tree.py  conventional_commits.py  gitleaks_tracked.sh  scrub_check.py  seed_navigator_demo.sh  smoke_live_handoff_sessions.sh  test_check_public_tree.py  test_conventional_commits.py  test_gitleaks_config.py  test_gitleaks_tracked.py  test_release_audit_refs.py  test_scrub_check.py  test_skills_catalog.py  vendor_libghostty_vt.py  windows_smoke_conpty_path.ps1
src/: agent_resume.rs  build_info.rs  checksum.rs  cli.rs  config.rs  config_dir.rs  events.rs  ipc.rs  logging.rs  main.rs  pane.rs  persist.rs  product_announcements.rs  raw_input.rs  release_notes.rs  remote.rs  render_prof.rs  selection.rs  session.rs  sound.rs  ui.rs  update.rs  workspace.rs  worktree.rs
src/api/: client.rs  mod.rs  schema.rs  server.rs
src/api/schema/: common.rs  events.rs  panes.rs  plugins.rs  response.rs  zynk.rs
src/app/: actions.rs  agent_resume.rs  agents.rs  api.rs  config_io.rs  creation.rs  ids.rs  mod.rs  runtime.rs  state.rs  worktrees.rs
src/app/api/: layouts.rs  panes.rs  tabs.rs  workspaces.rs  worktrees.rs  zynk.rs
src/app/input/: mod.rs  modal.rs  mouse.rs  navigate.rs  overlays.rs  settings.rs  sidebar.rs  terminal.rs
src/cli/: agent.rs  integration.rs  native.rs  notification.rs  pane.rs  plugin.rs  server.rs  skill.rs  status.rs  tab.rs  workspace.rs  worktree.rs  zynk.rs
src/client/: input.rs  mod.rs
src/client/input/: windows_vti.rs
src/config/: io.rs  keybinds.rs  model.rs
src/detect/: manifest_update.rs  mod.rs
src/detect/manifest/: tests.rs
src/detect/manifests/: kilo.toml  opencode.toml  pi.toml
src/ghostty/: mod.rs
src/integration/: mod.rs
src/pane/: input.rs  osc.rs  terminal.rs
src/persist/: io.rs  plugin_registry.rs  restore.rs  snapshot.rs
src/platform/: linux.rs  macos.rs  windows.rs
src/protocol/: wire.rs
src/pty/actor/: unix.rs
src/pty/backend/: unix.rs
src/remote/: unix.rs
src/server/: autodetect.rs  client_transport.rs  clipboard_image.rs  handoff.rs  headless.rs  notifications.rs  socket_paths.rs
src/terminal/: metadata.rs  state.rs
src/ui/: dialogs.rs  mobile.rs  onboarding.rs  release_notes.rs  settings.rs  sidebar.rs  status.rs
src/workspace/: aggregate.rs  tab.rs
src/workspace/git/: discovery.rs  status.rs  test_support.rs
src/zynk/: db.rs  db_cutover.rs  db_path.rs  embedding_worker.rs  header.rs  inbox.rs  message.rs  mod.rs  persistence.rs  receipt.rs  receipt_worker.rs  runtime.rs  skill.rs
src/zynk/embed/: fake.rs  fastembed.rs  mod.rs  vec.rs
src/zynk/retrieval/: fts.rs  mod.rs  rrf.rs  vector.rs
tests/: api_ping.rs  auto_detect.rs  cli_wrapper.rs  client_mode.rs  cross_area.rs  detach_reattach.rs  live_handoff.rs  multi_client.rs  server_headless.rs  zynk_db_cutover.rs  zynk_embed.rs  zynk_header.rs  zynk_message.rs  zynk_native_cli.rs  zynk_query.rs  zynk_receipt.rs
tests/fixtures/plugin-smoke/: zynk-plugin.toml
tests/fixtures/session/: legacy-pre-tabs-v2.json
tests/fixtures/update/: latest.json
tests/support/: mod.rs
(+29 files in other folders)
